environment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-dummy
  labels:
    app: prueba-dummy
spec:
  selector:
    app: prueba-dummy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
